Remove hardcoded string constant representing "UTF-8" where possible